# rest-diis

./: Cargo.toml  build.rs  readme.md  rustfmt.toml
.github/workflows/: mdbook.yml  test.yml
docs/: book.toml
docs/src/: SUMMARY.md  practice.md  toy_model.md  usage.md
examples/: toy_model.rs
src/: diis_incore.rs  diis_semi_incore.rs  incore_diis.rs  lib.rs  util.rs
