[package]
name = "rest-diis"
version = "0.1.0"
edition = "2024"

[dependencies]
# tensor libraries
rstsr = { version = ">= 0.2", default-features = false, features = ["linalg", "rayon", "std"] }
rstsr-openblas = { version = ">= 0.2", features = ["linalg", "openmp"] }
num = { version = "0.4" }

# hdf5 support
hdf5-metno = { version = "0.10", features = ["complex"] }
ndarray = { version = "0.16" }
tempfile = { version = "3.19" }

# struct builder with default values
derive_builder = { version = "0.20" }

# logging support
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["local-time"] }
log = { version = "0.4" }

# macro for duplicate
duplicate = { version = "2.0" }

[features]
sequential_io = []
